--- a/index.html
+++ b/index.html
@@ -1,7 +1,51 @@
-<html>
-<head>
-</head>
-<body>
-Test
-</body>
-</html>
+<Html>
+<Head>
+<Title>
+Indian Premier League Homepage
+</Title>
+<style>
+body{
+background-color:#00e6ff;
+}
+a, li{
+font-size:20px;
+}
+</style>
+</Head>
+<Body>
+<center><img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\IPL.jpg" height=250 width=250>
+</center>
+<br>
+<center><nav> <h1><a href="Players.Html" target="_blank"> Players</a>&nbsp | &nbsp <a href = 'IPL Table.html' target = '_blank'>Standings</a></h1>
+ </nav></center>
+<br>
+<center>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Yo_U65ok6c4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</center>
+<br>
+<br>
+<h1>
+IPL NEWS
+</h1>
+<ul>
+<li>
+<a href="https://www.ndtv.com/offbeat/wife-did-not-allow-csk-jersey-fans-placard-raises-a-storm-over-the-internet-2555052" Target="_blank">"Wife Didn't Allow": CSK Fan's Honest Banner During IPL Goes Viral</a>
+</li>
+<br>
+<li>
+<a href="https://timesofindia.indiatimes.com/sports/cricket/ipl/top-stories/ipl-2021-all-playoff-possibilities-for-the-8-teams-in-10-points/articleshow/86547556.cms" Target="_blank">IPL 2021: All playoffs possibilities for the 8 teams in 10 points</a>
+</li>
+<br>
+<li>
+<a href="https://www.hindustantimes.com/cricket/im-not-going-to-stand-on-air-and-call-out-their-names-brian-lara-claims-csk-have-couple-of-weak-areas-in-ipl-2021-101632733015727.html" Target="_Blank">'I'm not going to stand on air and call out their names': Brian Lara claims CSK have 'couple of weak areas' in IPL 2021</a>
+</li>
+<br>
+<li>
+<a href="https://sports.ndtv.com/ipl-2021/ipl-2021-csk-vs-kkr-still-having-neck-issues-faf-du-plessis-opens-up-on-his-abu-dhabi-injury-2555181" Target="_blank">"Still Having Neck Issues," Faf Du Plessis Opens Up On His Abu Dhabi Injury</a>
+</li><br>
+<li>
+<a href="https://www.dnaindia.com/cricket/report-ipl-2021-rcb-vs-mi-watch-ab-de-villiers-son-punches-his-hand-on-chair-in-disappointment-hurts-himself-after-his-father-got-out-viral-video-2913013" Target="_blank">AB de Villiers son punches his hand on chair in disappointment, hurts himself after his father got out</a>
+</li><br>
+</ul>
+</Body>
+</Html>
