--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ font-size:20px;
 </style>
 </Head>
 <Body>
-<center><img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\IPL.jpg" height=250 width=250>
+<center><img src="IPL.jpg" height=250 width=250>
 </center>
 <br>
 <center><nav> <h1><a href="Players.Html" target="_blank"> Players</a>&nbsp | &nbsp <a href = 'IPL Table.html' target = '_blank'>Standings</a></h1>
