--- a/Players.Html
+++ b/Players.Html
@@ -15,20 +15,19 @@ Players
 </title>
 </head>
 <body>
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Rohit Sharma.png" height = "200" width = "200">
+<img src="Rohit Sharma.png" height = "200" width = "200"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Keiron Pollard.png
-" height = "170" width = "250">
+<img src="Keiron Pollard.png" height = "170" width = "250"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Hardik Pandya.png" height = "190" width = "200">
+<img src="Hardik Pandya.png" height = "190" width = "200"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Krunal Pandya.png"height = "200" width = "290">
+<img src="Krunal Pandya.png" height = "200" width = "290"/>
 <br>
 <br>
 
@@ -57,23 +56,23 @@ Krunal Pandya-All Rounder
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\QDK.png"height = "150" width = "130">
+<img src="QDK.png" height = "150" width = "130"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Jasprit Bumrah.jpg"height = "150" width = "200">
+<img src="Jasprit Bumrah.jpg" height = "150" width = "200"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Trent Boult.png"height = "190" width = "260">
+<img src="Trent Boult.png" height = "190" width = "260"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\MI\Rahul Chahar.png"height = "200" width = "220">
+<img src="Rahul Chahar.png" height = "200" width = "220"/>
 <br>
 Quinton De Kock-Batsman,Wicket Keeper
 
@@ -109,22 +108,22 @@ Rahul Chahar-Bowler
 Chennai Super Kings
 </h1>
 </head>
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\MSD.png"height = "170" width = "260">
+<img src="MSD.png" height = "170" width = "260"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Suresh Raina.png"height = "150" width = "240">
+<img src="Suresh Raina.png" height = "150" width = "240"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Dwayne Bravo.png"height = "170" width = "260">
+<img src="Dwayne Bravo.png" height = "170" width = "260"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Ambati Rayudu.png"height = "170" width = "250">
+<img src="Ambati Rayudu.png" height = "170" width = "250"/>
 <br>
 <br>
 M.S.Dhoni-Batsman,Captain,Wicket Keeper
@@ -146,23 +145,23 @@ Dwayne Bravo-All-Rounder
 
 Ambati Raydu
 <br>
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Faf Du Plessis.png"height = "170" width = "260">
+<img src="Faf Du Plessis.png" height = "170" width = "260"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Ravindra Jadeja.png"height = "190" width = "285">
+<img src="Ravindra Jadeja.png" height = "190" width = "285"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Ruturaj Gaikwad.png"height = "190" width = "285">
+<img src="Ruturaj Gaikwad.png" height = "190" width = "285"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\CSK\Sam Curran.jpeg"height = "190" width = "220">
+<img src="Sam Curran.jpeg" height = "190" width = "220"/>
 <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Faf Du Plessis-Batsman
 
@@ -209,21 +208,21 @@ Sam Curran-All Rounder
 <h1>Delhi Capitals</h1>
 </head>
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\DC\Rishabh Pant.png"height = "220" width = "200">
+<img src="Rishabh Pant.png" height = "220" width = "200"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\DC\Shreyas Iyer.png"height = "240" width = "240">
+<img src="Shreyas Iyer.png" height = "240" width = "240"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\DC\Shikhar Dhawan.png"height = "250" width = "260">
+<img src="Shikhar Dhawan.png" height = "250" width = "260"/>
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\DC\Prithvi Shaw.png"height = "230" width = "250">
+<img src="Prithvi Shaw.png" height = "230" width = "250"/>
 <br>
 <br>
 
@@ -246,7 +245,7 @@ Prithvi Shaw-Batsman
 <br>
 <br>
 <br>
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\DC\Kagiso Rabada.png"height = "260" width = "250">
+<img src="Kagiso Rabada.png" height = "260" width = "250"/>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Kagiso Rabada
@@ -284,29 +283,29 @@ Kagiso Rabada
 <h1>Kolkata Knight Riders</h1>
 </head>
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\KKR\Eoin Morgan.png"height = "230" width = "200">
+<img src="Eoin Morgan.png" height = "230" width = "200"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\KKR\Andre Russell.png"height = "240" width = "240">
+<img src="Andre Russell.png" height = "240" width = "240"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\KKR\Pat Cummins.png"height = "240" width = "240">
+<img src="Pat Cummins.png" height = "240" width = "240"/>
 
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\KKR\Sunil Narine.png"height = "240" width = "240">
+<img src="Sunil Narine.png" height = "240" width = "240"/>
 
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\KKR\Lockie Ferguson.png"height = "240" width = "180">
+<img src="Lockie Ferguson.png" height = "240" width = "180"/>
 
 <br>Eoin Morgan-Captain,Batsman
 
@@ -329,46 +328,8 @@ Lockie Ferguson
 <br>
 <br>
 
-<img src="C:\Users\sumi_\OneDrive\Desktop\Vyom\CODING\Website Designing\Players of IPL\KKR\Tim Southee.png"height = "240" width = "180">
+<img src="Tim Southee.png" height = "240" width = "180"/>
 <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Tim Southee
 <br><br><br><br>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-<head>
-<h1>Sunrisers Hydrebad</h1>
-</head>	
-
-
-
-
-
-
-
-
-
-
