--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ font-size:20px;
 <center><img src="IPL.jpg" height=250 width=250/>
 </center>
 <br>
-<center><nav> <h1><a href="Players.Html" target="_blank"> Players</a>&nbsp | &nbsp <a href = "Standings.html" target = "_blank">Standings</a></h1>
+<center><nav> <h1><a href="Players.Html" target="_blank"> Players</a> &nbsp; | &nbsp; <a href = "Standings.Html" target = "_blank">Standings</a></h1>
  </nav></center>
 <br>
 <center>
