--- a/Players.Html
+++ b/Players.Html
@@ -333,3 +333,41 @@ Lockie Ferguson
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 Tim Southee
 <br><br><br><br>
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  
+  <head>
+  <h1>Sunrisers Hyderabad</h1>
+  </head>
+  <img src="Kane Williamson.png"height = "240" width = "180"/>
